--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -38,6 +38,15 @@ jobs:
           sudo mkdir -p .github/gh-pages/history
           sudo cp -R allure-report/history/* .github/gh-pages/history/ || true
 
+      - name: Commit and push updated history to gh-pages
+        run: |
+          cd .github/gh-pages
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add history
+          git commit -m "Update Allure history [skip ci]" || echo "No changes to commit"
+          git push origin gh-pages
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
