--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -43,9 +43,11 @@ jobs:
           cd .github/gh-pages
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.CI_TOKEN }}@github.com/${{ github.repository }}
           git add history
           git commit -m "Update Allure history [skip ci]" || echo "No changes to commit"
           git push origin gh-pages
+
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
