--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -43,10 +43,10 @@ jobs:
           cd .github/gh-pages
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.CI_TOKEN }}@github.com/${{ github.repository }}
           git add history
           git commit -m "Update Allure history [skip ci]" || echo "No changes to commit"
-          git push origin gh-pages
+          git push https://x-access-token:${{ secrets.CI_TOKEN }}@github.com/${{ github.repository }} HEAD:gh-pages
+
 
 
       - name: Deploy to GitHub Pages
