--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,47 +7,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout default branch
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v2
 
-      - name: Checkout gh-pages into temporary folder
-        uses: actions/checkout@v4
+      - name: Checkout (copy) gh-pages repository to GitHub runner
+        uses: actions/checkout@v2
         with:
           ref: gh-pages
-          path: .github/gh-pages
+          path: ./.github/gh-pages
 
-      - name: Clean old allure-results
-        run: rm -rf allure-results
-
-      - name: Run UI-tests via Docker Compose
-        run: docker compose up --exit-code-from regression || echo "Tests failed, continue to report"
+      - name: Run UI-tests via docker-compose
+        run: |
+          docker-compose up --exit-code-from regression || true
 
       - name: Copy history from gh-pages to allure-results
         run: |
-          sudo mkdir -p allure-results/history
-          if [ -d .github/gh-pages/history ]; then
-            sudo cp -R .github/gh-pages/history/* allure-results/history/ || true
-          fi
+          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
-          docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-      - name: Copy updated history to gh-pages
+      - name: Update Allure history
         run: |
-          sudo mkdir -p .github/gh-pages/history
-          sudo cp -R allure-report/history/* .github/gh-pages/history/ || true
-
-      - name: Commit and push updated history to gh-pages
-        run: |
-          cd .github/gh-pages
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add history
-          git commit -m "Update Allure history [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.CI_TOKEN }}@github.com/${{ github.repository }} HEAD:gh-pages
-
-
+          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
