--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,30 +7,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout default branch
+        uses: actions/checkout@v4
 
-      - name: Checkout (copy) gh-pages repository to GitHub runner
-        uses: actions/checkout@v2
+      - name: Checkout gh-pages into temporary folder
+        uses: actions/checkout@v4
         with:
           ref: gh-pages
-          path: ./.github/gh-pages
+          path: .github/gh-pages
 
-      - name: Run UI-tests via docker-compose
-        run: |
-          docker-compose up --exit-code-from regression || true
+      - name: Clean old allure-results
+        run: rm -rf allure-results
+
+      - name: Run UI-tests via Docker Compose
+        run: docker compose up --exit-code-from regression || echo "Tests failed, continue to report"
 
       - name: Copy history from gh-pages to allure-results
         run: |
-          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
-          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
+          sudo mkdir -p allure-results/history
+          if [ -d .github/gh-pages/history ]; then
+            sudo cp -R .github/gh-pages/history/* allure-results/history/ || true
+          fi
 
       - name: Generate Allure report
         run: |
-          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+          docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-      - name: Update Allure history
+      - name: Copy updated history to gh-pages
         run: |
-          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
+          sudo mkdir -p .github/gh-pages/history
+          sudo cp -R allure-report/history/* .github/gh-pages/history/ || true
+          
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
