--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Copy history from gh-pages to allure-results
         run: |
-          mkdir -p allure-results/history
+          sudo mkdir -p allure-results/history
           if [ -d .github/gh-pages/history ]; then
-            cp -R .github/gh-pages/history/* allure-results/history/ || true
+            sudo cp -R .github/gh-pages/history/* allure-results/history/ || true
           fi
 
       - name: Generate Allure report
